sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var T:Array[Int]
    ^AlgInsertionSort:19: error: not found: value compteur
compteur=i-1
^AlgInsertionSort:20: error: not found: value compteur
while(compteur>0 && T(compteur)>v)
      ^AlgInsertionSort:22: error: not found: value compteur
	T(compteur+1)=T(compteur)
          ^AlgInsertionSort:23: error: not found: value compteur
	compteur-=1	
        ^AlgInsertionSort:26: error: not found: value compteur
T(compteur+1)=v
  ^